<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>dev.morphia.morphia</groupId>
    <artifactId>morphia-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Morphia</name>
    <url>https://github.com/MorphiaOrg/morphia</url>

    <scm>
        <connection>scm:git:git@github.com:MorphiaOrg/morphia.git</connection>
        <developerConnection>scm:git:git@github.com:MorphiaOrg/morphia.git</developerConnection>
        <url>git@github.com:MorphiaOrg/morphia.git</url>
    </scm>

    <pluginRepositories>
        <pluginRepository>
            <id>snapshots</id>
            <name>Maven Central Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <awaitility.version>1.7.0</awaitility.version>
        <driver.version>3.11.0-SNAPSHOT</driver.version>
        <jacoco.version>0.8.4</jacoco.version>
        <json.assert.version>1.2.3</json.assert.version>
        <maven.version>3.6.1</maven.version>
        <slf4j.version>1.8.0-beta2</slf4j.version>
        <surefire.version>3.0.0-M3</surefire.version>
        <zt.exec.version>1.10</zt.exec.version>
        <revapi-java.version>0.18.1</revapi-java.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                        <compilerArgument>-proc:none</compilerArgument>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>${surefire.version}</version>
                    <configuration>
                        <alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
                <inherited>true</inherited>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <excludePackageNames>**/relocated/**, **/internal/**, dev/morphia/utils</excludePackageNames>
                    <doclint>none</doclint>
                    <doctitle>Morphia</doctitle>
                    <windowtitle>Morphia</windowtitle>
                    <tagletArtifacts>
                        <tagletArtifact>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>util</artifactId>
                            <version>${project.version}</version>
                        </tagletArtifact>
                    </tagletArtifacts>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
            </plugin>
        </plugins>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>build-plugins</module>
        <module>util</module>
        <module>morphia</module>
        <module>guice-plug</module>
        <module>validation</module>
        <module>no-proxy-deps-tests</module>
        <module>examples</module>
    </modules>
</project>
